[tool.poetry]
name = "python-flask-cnb-example"
version = "0.1.0"
description = ""
authors = ["Nicholas Carlson <carlsonn@vmware.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
Flask-Testing = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
